Fixed input center align and loading screen while image upload

--- a/frontend/src/components/Auth/Auth.css
+++ b/frontend/src/components/Auth/Auth.css
@@ -77,7 +77,6 @@
 
 .login-form-box input, .register-form-box input {
     border-radius: 5px;
-    text-align: center;
 }
 
 .form-email {
